Package_Tools/include-C/Ubuntu_26.04/glib-2.0/gio/gtlsbackend.h

#define __G_TLS_BACKEND_H__
/**
 * G_TLS_BACKEND_EXTENSION_POINT_NAME:
 *
 * Extension point for TLS functionality via #GTlsBackend.
 * See [Extending GIO](overview.html#extending-gio).
 */
#define G_TLS_BACKEND_EXTENSION_POINT_NAME "gio-tls-backend"
#define G_TYPE_TLS_BACKEND               (g_tls_backend_get_type ())
#define G_TLS_BACKEND(obj)               (G_TYPE_CHECK_INSTANCE_CAST ((obj), G_TYPE_TLS_BACKEND, GTlsBackend))
#define G_IS_TLS_BACKEND(obj)	         (G_TYPE_CHECK_INSTANCE_TYPE ((obj), G_TYPE_TLS_BACKEND))
#define G_TLS_BACKEND_GET_INTERFACE(obj) (G_TYPE_INSTANCE_GET_INTERFACE ((obj), G_TYPE_TLS_BACKEND, GTlsBackendInterface))
typedef struct _GTlsBackend          GTlsBackend;
typedef struct _GTlsBackendInterface GTlsBackendInterface;
/**
 * GTlsBackendInterface:
 * @g_iface: The parent interface.
 * @supports_tls: returns whether the backend supports TLS.
 * @supports_dtls: returns whether the backend supports DTLS
 * @get_default_database: returns a default #GTlsDatabase instance.
 * @get_certificate_type: returns the #GTlsCertificate implementation type
 * @get_client_connection_type: returns the #GTlsClientConnection implementation type
 * @get_server_connection_type: returns the #GTlsServerConnection implementation type
 * @get_file_database_type: returns the #GTlsFileDatabase implementation type.
 * @get_dtls_client_connection_type: returns the #GDtlsClientConnection implementation type
 * @get_dtls_server_connection_type: returns the #GDtlsServerConnection implementation type
 *
 * Provides an interface for describing TLS-related types.
 *
 * Since: 2.28
 */
struct _GTlsBackendInterface
{
  GTypeInterface g_iface;

  /* methods */
  gboolean       ( *supports_tls)               (GTlsBackend *backend);
  GType          ( *get_certificate_type)       (void);
  GType          ( *get_client_connection_type) (void);
  GType          ( *get_server_connection_type) (void);
  GType          ( *get_file_database_type)     (void);
  GTlsDatabase * ( *get_default_database)       (GTlsBackend *backend);
  gboolean       ( *supports_dtls)              (GTlsBackend *backend);
  GType          ( *get_dtls_client_connection_type) (void);
  GType          ( *get_dtls_server_connection_type) (void);
};
extern
GType          g_tls_backend_get_type                   (void) ;
extern
GTlsBackend *  g_tls_backend_get_default                (void);
extern
GTlsDatabase * g_tls_backend_get_default_database       (GTlsBackend *backend);
extern
void           g_tls_backend_set_default_database       (GTlsBackend  *backend,
                                                         GTlsDatabase *database);
extern
gboolean       g_tls_backend_supports_tls               (GTlsBackend *backend);
extern
gboolean       g_tls_backend_supports_dtls              (GTlsBackend *backend);
extern
GType          g_tls_backend_get_certificate_type       (GTlsBackend *backend);
extern
GType          g_tls_backend_get_client_connection_type (GTlsBackend *backend);
extern
GType          g_tls_backend_get_server_connection_type (GTlsBackend *backend);
extern
GType          g_tls_backend_get_file_database_type     (GTlsBackend *backend);
extern
GType          g_tls_backend_get_dtls_client_connection_type (GTlsBackend *backend);
extern
GType          g_tls_backend_get_dtls_server_connection_type (GTlsBackend *backend);